[gd_scene load_steps=15 format=2]

[ext_resource path="res://maps/level objects/geyser.gd" type="Script" id=1]

[sub_resource type="ConvexPolygonShape" id=269]
points = PoolVector3Array( 1.5, 0, 1.5, 1.5, 0, -1.5, -1.5, 0, 1.5, -1.5, 0, -1.5, 0, 0.75, 0 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0.87451, 1 )

[sub_resource type="PrismMesh" id=3]
material = SubResource( 2 )
size = Vector3( 3, 1, 3 )

[sub_resource type="Animation" id=194]
resource_name = "idle"
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("steam/partTop:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("steam/partTop:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("steam/partRise:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxes/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitboxes/hitbox/hitboxCollision:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -4, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("steam/partRise:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -1, 0 ) ]
}

[sub_resource type="Animation" id=198]
resource_name = "steam"
length = 4.0
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("steam/partTop:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("steam/partTop:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.2, 3, 3.2, 3.83333, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 6, 0 ), Vector3( 0, 6, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("steam/partRise:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 3, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxes/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 3, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitboxes/hitbox/hitboxCollision:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.2, 3, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -4, 0 ), Vector3( 0, -4, 0 ), Vector3( 0, 3, 0 ), Vector3( 0, 3, 0 ), Vector3( 0, -4, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("steam/partRise:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3, 3.2, 3.83333, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -1, 0 ), Vector3( 0, -1, 0 ), Vector3( 0, -7, 0 ), Vector3( 0, -7, 0 ), Vector3( 0, -1, 0 ) ]
}

[sub_resource type="Animation" id=199]
resource_name = "steamConst"
length = 0.166667
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("steam/partTop:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("steam/partTop:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 6, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("steam/partRise:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxes/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitboxes/hitbox/hitboxCollision:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 3, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("steam/partRise:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -1, 0 ) ]
}

[sub_resource type="Animation" id=200]
resource_name = "warn"
length = 10.0
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("steam/partTop:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("steam/partTop:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("steam/partRise:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitboxes/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitboxes/hitbox/hitboxCollision:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -4, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("steam/partRise:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -1, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=201]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.756863, 0.847059, 0.819608, 0.784314 )

[sub_resource type="SphereMesh" id=195]
material = SubResource( 201 )
radial_segments = 6
rings = 3

[sub_resource type="SphereMesh" id=196]
material = SubResource( 201 )
height = 5.0
radial_segments = 6
rings = 3

[sub_resource type="CylinderMesh" id=4]
top_radius = 1.5
bottom_radius = 1.5
height = 6.0

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0.627451, 0.568627, 0.478431, 0.490196 )

[sub_resource type="CylinderShape" id=197]
radius = 1.5
height = 6.0

[node name="geyser" type="StaticBody"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 269 )
disabled = true

[node name="base" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 194 )
anims/steam = SubResource( 198 )
anims/steamConst = SubResource( 199 )
anims/warn = SubResource( 200 )

[node name="steam" type="Spatial" parent="."]

[node name="partTop" type="CPUParticles" parent="steam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0 )
amount = 20
lifetime = 0.1
mesh = SubResource( 195 )
emission_shape = 5
emission_ring_radius = 2.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 1, 0 )
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
radial_accel = 200.0
scale_amount = 0.5

[node name="partRise" type="CPUParticles" parent="steam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
amount = 10
lifetime = 0.2
mesh = SubResource( 196 )
emission_shape = 5
emission_ring_radius = 1.2
emission_ring_inner_radius = 0.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 1, 0 )
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 31.01

[node name="volume" type="MeshInstance" parent="steam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="hitboxes" type="Spatial" parent="."]

[node name="hitbox" type="Area" parent="hitboxes"]
collision_layer = 40
collision_mask = 0
monitoring = false

[node name="hitboxCollision" type="CollisionShape" parent="hitboxes/hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 197 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="camera_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
